--- a/backend/TesterLab.Infrastructure.Selenium/TesterLab.Infrastructure.Selenium.csproj
+++ b/backend/TesterLab.Infrastructure.Selenium/TesterLab.Infrastructure.Selenium.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Selenium.Support" Version="4.35.0" />
+    <PackageReference Include="Selenium.WebDriver.GeckoDriver" Version="0.36.0" />
   </ItemGroup>
 
   <ItemGroup>
